[gd_scene load_steps=15 format=3 uid="uid://do8ubb5tolvhr"]

[ext_resource type="Script" uid="uid://cb2p4hmkg1boy" path="res://Queenie/queenie.gd" id="1_7o7dh"]
[ext_resource type="Texture2D" uid="uid://b44x7et3hpry4" path="res://assets/Spritesheets/Bee_Idle.png" id="2_ov8pr"]
[ext_resource type="Texture2D" uid="uid://bra87oxeychel" path="res://assets/Spritesheets/Bee_Walk.png" id="3_7upog"]
[ext_resource type="FontFile" uid="uid://b1fbpgfou7fft" path="res://tinypixel.otf" id="4_8begp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k1knn"]
atlas = ExtResource("2_ov8pr")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82d28"]
atlas = ExtResource("2_ov8pr")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_24fvv"]
atlas = ExtResource("2_ov8pr")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_anqrp"]
atlas = ExtResource("2_ov8pr")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8begp"]
atlas = ExtResource("3_7upog")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o7dh"]
atlas = ExtResource("3_7upog")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov8pr"]
atlas = ExtResource("3_7upog")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_otjky"]
atlas = ExtResource("3_7upog")
region = Rect2(192, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_82d28"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1knn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82d28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24fvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anqrp")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8begp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o7dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov8pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otjky")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24fvv"]
size = Vector2(10, 12)

[node name="Queenie" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_mask = 6
script = ExtResource("1_7o7dh")

[node name="q_sprites" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 9)
sprite_frames = SubResource("SpriteFrames_82d28")
animation = &"run"
autoplay = "idle"
frame_progress = 0.24016921

[node name="q_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_24fvv")

[node name="TimerCooldownTiro" type="Timer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Abelhas" type="Label" parent="HUD"]
anchors_preset = -1
anchor_left = 0.036000002
anchor_top = 0.020000001
anchor_right = 0.036000002
anchor_bottom = 0.020000001
offset_left = -38.472004
offset_top = -9.960001
offset_right = 37.527996
offset_bottom = 10.039999
scale = Vector2(1.7199998, 1.7600007)
theme_override_fonts/font = ExtResource("4_8begp")
text = "Abelhas:"
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="TimerCooldownTiro" to="." method="_on_timer_cooldown_tiro_timeout"]
